# assignment1

./: .gitignore  README.md  RECAP.md  pyproject.toml
alembic/: env.py
alembic/versions/: 29beeec0d7fb_add_genre_to_book.py  8f1508cd8e6f_create_book_table.py
app/: main.py
app/models/: database.py  engine.py
app/router/: book.py
app/schema/: book.py
